[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
utoipa = { version = "^4.0.0", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "^4.0.0", features = ["rocket"] }
serde = { version = "1.0.219", features = ["derive"] }